<resources>
    <string name="app_name">firebase_with_mvvm</string>
    <string name="autenticar">Autenticar</string>
    <string name="login">Login</string>
    <string name="criar_uma_nova_conta">Criar uma nova conta</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_user">Create User</string>
    <string name="new_user">New User</string>
    <string name="uid">Uid</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
</resources>